Fixed issue with banner clipping. Colour changes for headings.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --tertiary-color-dark: hsl(41, 90%, 48%);
     --charcoal-color: hsl(0, 0%, 25%);
 
+    /* --- Other --- */
     --banner-image: url(images/aerial_beach_small.jpg);
     --slogan-font-size-smallscreen: 25px;
     --logobar-height-smallscreen: 70px;
@@ -143,7 +144,7 @@ header {
     background-image: var(--banner-image);
     width: 100%;
     height: 90vw;
-    background-position: -130px -20px;
+    background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -185,6 +186,7 @@ header {
     color: white;
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
     font-family: 'Noto Serif', serif;
+    margin-top: 5px;
 }
 
 .banner-content {
@@ -197,7 +199,7 @@ header {
 .banner-content li {
     font-size: 1.4em;
     color: white;
-    text-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
     font-weight: bold;
 }
 
@@ -348,7 +350,6 @@ strong {
     font-weight: bold;
 }
 
-
 #headshot {
     display: block;
     width: 100%;
@@ -439,7 +440,7 @@ footer .contact {
     font-size: 1em;
     width: 100%;
     background-color: var(--primary-color);
-    height: calc(var(--logobar-height-smallscreen) * 1.5);
+    height: calc(var(--logobar-height-smallscreen) * 1.7);
     padding: 0 5px;
 }
 
